--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,5 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStringSQL": "Server=host.docker.internal,1433;Database=TechChallengeDB;User Id=sa;Password=FiapAlura&TechChallenge1"
+  "ConnectionStringSQL": "Server=host.docker.internal,1450;Database=FIAP;User Id=sa;Password=Fiap@2024"
+  //"ConnectionStringSQL": "Server=sqldata,1433;Database=FIAP;User Id=sa;Password=Fiap@2024"
+  //"ConnectionStringSQL": "Data Source=localhost,1450;Database=FIAP;Trusted_Connection=true",
+  //"ConnectionStringSQL": "Server=host.docker.internal,1433;Database=FIAP;User Id=sa;Password=Fiap@2024",
 }
