--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,17 @@ services:
     build:
       context: .
       dockerfile: API/Dockerfile
+    ports: 
+       - "8081:80"
     depends_on:
         - sqldata
+
   sqldata:
     image: mcr.microsoft.com/mssql/server:2019-latest
     environment:
-        - SA_PASSWORD=FiapAlura&TechChallenge1
+        - SA_PASSWORD=Fiap@2024
         - ACCEPT_EULA=Y
     volumes:
         - c:\dados\volumes\mssql:/var/opt/mssql/data
     ports:
-        - "1433:1433"
+        - "1450:1433"
