--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -23,3 +23,20 @@ jobs:
         
       - name: Build
         run: dotnet build ./TechChallenge_Contatos_DDD.sln --no-restore
+        
+  unit_tests:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v2
+        with:
+          dotnet-version: '8.0.x'
+
+      - name: Run unit tests
+        run: dotnet test ./TechChallenge-Modulo-2-Fiap/Tests/Tests.csproj --no-build --configuration Release --collect
+        
