--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -40,3 +40,37 @@ jobs:
       - name: Run unit tests
         run: dotnet test ./Tests/Tests.csproj --configuration Debug --collect:"XPlat Code Coverage"
         
+  integration_tests:
+    runs-on: ubuntu-latest
+    needs: unit_tests
+
+    services:
+      mssql:
+        image: mcr.microsoft.com/mssql/server:2019-latest
+        ports:
+          - 1450:1433
+        env:
+          SA_PASSWORD: "Fiap@2024"
+          ACCEPT_EULA: "Y"
+        options: >-
+          --health-cmd "/opt/mssql-tools/bin/sqlcmd -S localhost -U SA -P 'Fiap@2024' -Q 'SELECT 1'"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v2
+        with:
+          dotnet-version: 8.0.x
+
+      - name: Wait for SQL Server to be ready
+        run: sleep 30
+
+      - name: Run integration tests
+        env:
+          ConnectionStrings__DefaultConnection: "Server=localhost;Database=YourDatabaseName;User Id=sa;Password=Fiap@2024;"
+        run: dotnet test ./IntegrationTests/IntegrationTests.csproj --no-build --configuration Release --filter Category=Integration
