--- a/API/API.csproj
+++ b/API/API.csproj
@@ -20,4 +20,7 @@
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="..\Tests\IntegrationTests.csproj"/>
+  </ItemGroup>
 </Project>
