--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -72,5 +72,5 @@ jobs:
 
       - name: Run integration tests
         env:
-          ConnectionStrings__DefaultConnection: "Server=localhost;Database=YourDatabaseName;User Id=sa;Password=Fiap@2024;"
-        run: dotnet test ./Tests/IntegrationTests/IntegrationTests.csproj --no-build --configuration Release --filter Category=Integration
+          ConnectionStrings__DefaultConnection: "Server=localhost;Database=FIAP;User Id=sa;Password=Fiap@2024;"
+        run: dotnet test ./Tests/IntegrationTests/IntegrationTests.csproj --configuration Release --filter Category=Integration
